# regexptrans

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
it_to_re/: Makefile.am  Makefile.in  MakefileTemplate  ast.c  ast.h  lexer.c  lexer.h  lexer.l  main.c  parser.c  parser.h  parser.output  parser.y
re_to_it/: Makefile.am  Makefile.in  MakefileTemplate  ast.c  ast.h  lexer.c  lexer.h  lexer.l  main.c  parser.c  parser.h  parser.output  parser.y  symtab.c  symtab.h
